# pallet-swaps

./: Cargo.toml
fungible/: Cargo.toml
fungible/src/: lib.rs  mock.rs
src/: lib.rs  mock.rs
