[package]
name = "pallet-swaps"
version = "0.1.1"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[dependencies.pallet-balances]
default-features = false
package = 'pallet-balances'
version = '3.0.0'

[dependencies.pallet-fungible]
default-features = false
path = './fungible'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
version = '3.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.1'

[dependencies.frame-system]
default-features = false
version = '3.0.0'

[dev-dependencies.sp-core]
default-features = false
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'

[dev-dependencies.serde]
default-features = false
version = '1.0.119'

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'pallet-fungible/std'
]
